Form Responses Saved

--- a/Forms_PROJECT_Angular/forms-management/angular.json
+++ b/Forms_PROJECT_Angular/forms-management/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "forms-management"
+  "defaultProject": "forms-management",
+  "cli": {
+    "analytics": false
+  }
 }
