--- a/FORMS_PROJECT_Nodejs/package.json
+++ b/FORMS_PROJECT_Nodejs/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "hubspot": "^2.3.13",
     "init": "^0.1.2",
     "mongoose": "^5.9.27",
     "randomstring": "^1.1.5"
