--- a/Forms_PROJECT_Angular/forms-management/package.json
+++ b/Forms_PROJECT_Angular/forms-management/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.5.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
